Add RISC Zero ZK payment system with working proof generation and verification
- Implemented complete ZK payment system with RISC Zero zkVM
- Added transaction creation, batch processing with ZK proofs
- Integrated Merkle tree for verifiable state management
- Added receipt verification functionality
- Fixed transaction nonce validation logic
- Updated to RISC Zero v2.3 dependencies
- Structured as multi-crate workspace with dedicated guest package

--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,17 +1,7 @@
 [package]
-name = "payment-methods"
+name = "payment-guest"
 version = "0.1.0"
 edition = "2021"
-
-[package.metadata.risc0]
-methods = ["guest"]
-
-[lib]
-name = "payment_methods"
-path = "src/lib.rs"
-
-[build-dependencies]
-risc0-build = "2.3"
 
 [dependencies]
 risc0-zkvm = { version = "2.3", default-features = false, features = ["std"] }
@@ -20,4 +10,4 @@ sha2 = { version = "0.10", default-features = false }
 
 [[bin]]
 name = "payment_batch"
-path = "src/bin/payment_batch.rs"
+path = "src/main.rs" 
