--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ name = "risc-zero-payment"
 version = "0.1.0"
 edition = "2021"
 
+[package.metadata.risc0]
+methods = ["methods"]
+
 [workspace]
-members = ["methods"]
+members = ["methods", "methods/guest"]
 
 [dependencies]
-risc0-zkvm = { version = "1.2", features = ["client"] }
+risc0-zkvm = { version = "2.3", features = ["client"] }
 tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -19,7 +22,7 @@ bincode = "1.3"
 payment-methods = { path = "methods" }
 
 [build-dependencies]
-risc0-build = "1.2"
+risc0-build = "2.3"
 
 [[bin]]
 name = "host"
