--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 bincode = "1.3"
 payment-methods = { path = "methods" }
+axum = { version = "0.7", features = ["macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors"] }
+rand = "0.8"
 
 [build-dependencies]
 risc0-build = "2.3"
