Fix compilation errors: rename Merkle.rs to merkle.rs and clean up unused imports

--- a/render.yaml
+++ b/render.yaml
@@ -13,5 +13,5 @@ services:
         value: info
       - key: RUST_BACKTRACE
         value: 1
-    buildCommand: ./build.sh
+    buildCommand: ./build-render.sh
     startCommand: ./start.sh 
